updated code to Python syntax

--- a/07 Data Library/01 Forex/01 Introduction.html
+++ b/07 Data Library/01 Forex/01 Introduction.html
@@ -19,10 +19,10 @@ AddForex(string pair,
 </pre>
 	<pre class="python"># Complete Add Forex API - Including Default Parameters:
 self.AddForex(string pair,
-    Resolution resolution = Resolution.Minute,
-    string market = null,
-    bool fillDataForward = true,
-    decimal leverage = 0m)
+    resolution = Resolution.Minute,
+    market = None,
+    fillDataForward = True,
+    leverage = 0.0)
 </pre>
 </div>
 <p>
